--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <h1>Friends!</h1>
     <p>Hi Beaver and Johnny!</p>
+	<p>How are you guys?</p>
 
 
     <!-- Optional JavaScript -->
