--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <h1>Friends!</h1>
   <p>Hi Beaver and Johnny!</p>
   <p>How are you guys?</p>
+  <link href="week01.html">Click Me</link>
 
 
   <!-- Optional JavaScript -->
