--- a/index.html
+++ b/index.html
@@ -14,49 +14,10 @@
 </head>
 
 <body>
-  <!--Navbar -->
-  <nav class="mb-1 fixed-top scrolling-navbar navbar navbar-expand-lg navbar-dark primary-color">
-    <a class="navbar-brand" href="index.html">
-      <img
-        src="https://img1.wsimg.com/isteam/ip/7667ded4-1025-48ef-be02-af0d9cb342d7/logo/d8afb318-671c-46ad-886e-2fbce2f5fb14.png/:/rs=h:525/qt=q:95"
-        height="50" alt="image not loaded">
-    </a>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Home
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="week01.html">Week01</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="HowToVote.html">How to Vote</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Volunteer.html">Volunteer</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="ContactUs.html">Contact Us</a>
-        </li>
-      </ul>
-    </div>
-    <a type="button" class="btn btn-outline-white waves-effect"
-      href="https://secure.actblue.com/donate/votehuerta.org">Donate</a>
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
-      aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-  </nav>
-
   <h1>Friends!</h1>
   <p>Hi Beaver and Johnny!</p>
   <p>How are you guys?</p>
-  <link href="week01.html">Click Me</link>
+  <a class="btn btn-primary" href="week01.html" role="button">Link</a>
 
 
   <!-- Optional JavaScript -->
