--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-  <h1>Friends!</h1>
-  <p>Hi Beaver and Johnny!</p>
-  <p>How are you guys?</p>
-  <a class="btn btn-primary" href="week01.html" role="button">Link</a>
+  <h1>Maintaince</h1>
+  <p>My website is under construction. However, you can see the experiment happening.</p>
+  <a class="btn btn-primary" href="week01.html" role="button">Example</a>
+  <a class="btn btn-primary" href="azul.html" role="button">Main Website</a>
 
 
   <!-- Optional JavaScript -->
