--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <h1>Maintaince</h1>
   <p>My website is under construction. However, you can see the experiment happening.</p>
   <a class="btn btn-primary" href="week01.html" role="button">Example</a>
-  <a class="btn btn-primary" href="azul.html" role="button">Main Website</a>
+  <a class="btn btn-primary" href="Azul/azul.html" role="button">Main Website</a>
 
 
   <!-- Optional JavaScript -->
