Made changes to index and folders

--- a/index.html
+++ b/index.html
@@ -14,11 +14,29 @@
 </head>
 
 <body>
-  <h1>Maintaince</h1>
-  <p>My website is under construction. However, you can see the experiment happening.</p>
-  <a class="btn btn-primary" href="week01.html" role="button">Example</a>
-  <a class="btn btn-primary" href="Azul/azul.html" role="button">Main Website</a>
+  <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="index.html">Juan Garcia</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="Azul/azul.html">Temporary</a>
+        <a class="nav-item nav-link" href="#">Resume</a>
+        <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">New Website</a>
+      </div>
+    </div>
+  </nav>
 
+  <div class="jumbotron">
+    <h1 class="display-4">Maintaince!</h1>
+    <p class="lead">My website is under construction.</p>
+    <hr class="my-4">
+    <p>However, you can see the temporary website that I had up.</p>
+    <a class="btn btn-primary btn-lg" href="Azul/azul.html" role="button">Temporary Website</a>
+  </div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
