--- a/Azul/azul.html
+++ b/Azul/azul.html
@@ -1,113 +1,125 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<link rel="stylesheet" href="Azulmedia.css" type="text/css" />
-<title>Craftsonia</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+  <link rel="stylesheet" href="Azulmedia.css" type="text/css" />
+  <script src="js/script.js"></script>
+  <title>Craftsonia</title>
 </head>
+
 <body>
-<div id="wrap">
-  <div id="header">
-    <h1 id="logo">craft<span class="gray">sonia</span></h1>
-    <h2 id="slogan">Without order, there will be chaos</h2>
-    <div id="menu">
-      <ul>
-        <li id="current"><a href="#">Home</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Downloads</a></li>
-        <li><a href="#">Support</a></li>
-        <li><a href='http://www.cs.csubak.edu/~jgarcia3/about.php'>About</a></li>
-      </ul>
-    </div>
-  </div>
-  <div id="content-wrap">
-    <div id="sidebar" >
-      <h1 class="clear">Sidebar Menu</h1>
-      <ul class="sidemenu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#Computer Science">Computer Science</a></li>
-        <li><a href="#SampleTags">Sample Tags</a></li>
-        <li><a href="#">Free</a></li>
-        <li><a href="#">Premium Templates</a></li>
-      </ul>
-      <h1>Site Partners</h1>
-      <ul class="sidemenu">
-        <li><a href='http://www.csub.edu'>CSUB Website</a></li>
-        <li><a href='http://www.cs.csubak.edu'>CSUB CS Website</a></li>
-        <li><a href='http://moodle.cs.csubak.edu/moodle/'>Moodle</a></li>
-        <li><a href='http://www.google.com'>Google</a></li>
-        <li><a href='http://www.cs.csubak.edu/~jgarcia3/temp/'>Old Website</a></li>
-      </ul>
-      <h1>Search</h1>
-      <div class="searchform">
-        <form action="#">
-          <p>
-            <input name="search_query" class="textbox" type="text" />
-            <input name="search" class="button" value="Search" type="submit" />
-          </p>
-        </form>
-      </div>
-      <h1>Wise Words</h1>
-      <p>&quot;The happiest people are those who invested their time in others. The unhappiest people are those who wonder how the world is going to make them happy&quot;</p>
-      <p class="align-right">- John Maxwell</p>
-      <h1>Support Styleshout</h1>
-    </div>
-    <div id="main"> <a name="Computer Science"></a>
-      <div class="box">
-        <h1>Computer <span class="gray">Science</span></h1>
+  <div id="wrap">
+    <div id="header">
+      <h1 id="logo">Juan<span class="gray">Garcia</span></h1>
+      <h2 id="slogan">Without order, there will be chaos</h2>
+      <div id="menu">
         <ul>
-            <li><strong><a href="http://www.cs.csubak.edu/~jgarcia3/cmps311">cs311</a></strong></li>
-            <li><strong><a href="http://www.cs.csubak.edu/~jgarcia3/cs2680">cs2680</a></strong></li>
-            <li><strong><a href="http://www.cs.csubak.edu/~jgarcia3/cs3650">cs3650</a></strong></li>
+          <li id="current"><a href="azul.html">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Resume</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href='http://www.cs.csubak.edu/~jgarcia3/about.php'>Contact</a></li>
         </ul>
-        <p class="comments align-right"> <a href="#">Read more</a> : <a href="#">Comments(7)</a> : Oct 28, 2006 </p>
       </div>
-      <a name="Computer Engineering"></a>
-      <div class="box">
-        <h1>Computer <span class="gray">Engineering</span></h1>
-        <h3>Example of Code used in Computer Engineering.</h3>
-        <p><code> main() { <br />
+    </div>
+    <div id="content-wrap">
+      <div id="sidebar">
+        <h1 class="clear">Sidebar Menu</h1>
+        <ul class="sidemenu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#Computer Science">Resume</a></li>
+          <li><a href="#SampleTags">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Frelance Web Developer</a></li>
+        </ul>
+        <h1>Downloads</h1>
+        <ul class="sidemenu">
+          <li><a href='../Documents/garcia_juan_resume.pdf' download>Resume</a></li>
+          <li><a href='http://www.cs.csubak.edu'>CSUB CS Website</a></li>
+          <li><a href='http://moodle.cs.csubak.edu/moodle/'>Moodle</a></li>
+          <li><a href='http://www.google.com'>Google</a></li>
+          <li><a href='http://www.cs.csubak.edu/~jgarcia3/temp/'>Old Website</a></li>
+        </ul>
+        <h1>Wise Words</h1>
+        <p>&quot;The happiest people are those who invested their time in others. The unhappiest people are those who
+          wonder how the world is going to make them happy&quot;</p>
+        <p class="align-right">- John Maxwell</p>
+      </div>
+      <div id="main"> <a name="Computer Science"></a>
+        <div class="box">
+          <h1>Previous<span class="gray">Website</span></h1>
+          <p>This is to return on the main website page.</p>
+          <ul>
+            <li><strong><a href="../index.html">Main Page</a></strong></li>
+          </ul>
+        </div>
+        <a name="Computer Engineering"></a>
+        <div class="box">
+          <h1>Computer <span class="gray">Engineering</span></h1>
+          <h3>Example of Code used in Computer Engineering.</h3>
+          <p><code> main() { <br />
           cout &lt;&lt; "Hello World!";<br />
           } </code></p>
-        <h3>Programs used in Computer Engineering.</h3>
-        <ol>
-          <li>LabVIEW</li>
-          <li>MATLAB</li>
-        </ol>
-        <h3>Blockquote</h3>
-        <blockquote>
-          <p>"The only thing necessary for the triumph of evil is for good men to do nothing." -Edmund Burke</p>
-          <p><center><?php include 'calendar.php'; ?></center></p>
-        </blockquote>
-        <h3>Image and text</h3>
-        <p><a href="http://getfirefox.com/"><img src="firefox-gray.jpg" width="100" height="121" alt="firefox-gray" class="float-left" /></a> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo.</p><br /><br /><br /><br /><br />
-        <h3>Example Form</h3>
-        <form action="#">
-          <p>
-            <label>Name</label>
-            <input name="dname" value="Your Name" type="text" size="30" />
-            <label>Email</label>
-            <input name="demail" value="Your Email" type="text" size="30" />
-            <label>Your Comments</label>
-            <textarea rows="5" cols="5"></textarea>
-            <br />
-            <input class="button" type="submit" />
-          </p>
-        </form>
-        <br />
+          <h3>Programs used in Computer Engineering.</h3>
+          <ol>
+            <li>LabVIEW</li>
+            <li>MATLAB</li>
+          </ol>
+          <h3>Blockquote</h3>
+          <blockquote>
+            <p>"The only thing necessary for the triumph of evil is for good men to do nothing." -Edmund Burke</p>
+            <p>
+              <div id="calendar"></div>
+              <iframe src="calendar.html" height="200" width="300"></iframe>
+            </p>
+          </blockquote>
+          <h3>Image and text</h3>
+          <p><a href="http://getfirefox.com/"><img src="firefox-gray.jpg" width="100" height="121" alt="firefox-gray"
+                class="float-left" /></a> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero.
+            Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem,
+            eu posuere nunc justo tempus leo.</p><br /><br /><br /><br /><br />
+          <h3>Example Form</h3>
+          <form action="#">
+            <p>
+              <label>Name</label>
+              <input name="dname" value="Your Name" type="text" size="30" />
+              <label>Email</label>
+              <input name="demail" value="Your Email" type="text" size="30" />
+              <label>Your Comments</label>
+              <textarea rows="5" cols="5"></textarea>
+              <br />
+              <input class="button" type="submit" />
+            </p>
+          </form>
+          <br />
+        </div>
       </div>
+      <br />
     </div>
-    <br />
   </div>
-</div>
-<div id="footer-wrap">
-  <div class="footer-left">
-    <p class="align-left"> &copy; 2016 <strong>Craftsonia</strong> | Design by <a href="http://www.styleshout.com/">styleshout</a> | Valid <a href="http://validator.w3.org/check/referer">XHTML</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> </p>
+  <div id="footer-wrap">
+    <div class="footer-left">
+      <p class="align-left"> &copy; 2016 <strong>Garcia</strong> | Design by <a
+          href="http://www.styleshout.com/">styleshout</a> | Valid <a
+          href="http://validator.w3.org/check/referer">XHTML</a> | <a
+          href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> </p>
+    </div>
+    <div class="footer-right">
+      <p class="align-right"> <a href="index.html">Home</a>&nbsp;|&nbsp; <a href="#">SiteMap</a>&nbsp;|&nbsp; <a
+          href="#">RSS
+          Feed</a> </p>
+    </div>
   </div>
-  <div class="footer-right">
-    <p class="align-right"> <a href="#">Home</a>&nbsp;|&nbsp; <a href="#">SiteMap</a>&nbsp;|&nbsp; <a href="#">RSS Feed</a> </p>
-  </div>
-</div>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 </body>
-</html>
 
+</html>
