--- a/Azul/azul.html
+++ b/Azul/azul.html
@@ -11,7 +11,7 @@
 <body>
   <div id="wrap">
     <div id="header">
-      <h1 id="logo">Juan<span class="gray">Garcia</span></h1>
+      <h1 id="logo">Juan <span class="gray">Garcia</span></h1>
       <h2 id="slogan">Without order, there will be chaos</h2>
       <div id="menu">
         <ul>
@@ -25,30 +25,20 @@
     </div>
     <div id="content-wrap">
       <div id="sidebar">
-        <h1 class="clear">Sidebar Menu</h1>
+        <h1 class="clear">Profiles</h1>
         <ul class="sidemenu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#Computer Science">Resume</a></li>
-          <li><a href="#SampleTags">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Frelance Web Developer</a></li>
-        </ul>
-        <h1>Downloads</h1>
-        <ul class="sidemenu">
+          <li><a href="https://github.com/jgarcia45">Github</a></li>
+          <li><a href="https://www.linkedin.com/in/jgarcia45/">LinkedIn</a></li>
           <li><a href='../Documents/garcia_juan_resume.pdf' download>Resume</a></li>
-          <li><a href='http://www.cs.csubak.edu'>CSUB CS Website</a></li>
-          <li><a href='http://moodle.cs.csubak.edu/moodle/'>Moodle</a></li>
-          <li><a href='http://www.google.com'>Google</a></li>
-          <li><a href='http://www.cs.csubak.edu/~jgarcia3/temp/'>Old Website</a></li>
         </ul>
-        <h1>Wise Words</h1>
+        <h1 class="clear">Wise Words</h1>
         <p>&quot;The happiest people are those who invested their time in others. The unhappiest people are those who
           wonder how the world is going to make them happy&quot;</p>
         <p class="align-right">- John Maxwell</p>
       </div>
       <div id="main"> <a name="Computer Science"></a>
         <div class="box">
-          <h1>Previous<span class="gray">Website</span></h1>
+          <h1>Previous <span class="gray">Website</span></h1>
           <p>This is to return on the main website page.</p>
           <ul>
             <li><strong><a href="../index.html">Main Page</a></strong></li>
@@ -56,11 +46,11 @@
         </div>
         <a name="Computer Engineering"></a>
         <div class="box">
-          <h1>Computer <span class="gray">Engineering</span></h1>
-          <h3>Example of Code used in Computer Engineering.</h3>
-          <p><code> main() { <br />
-          cout &lt;&lt; "Hello World!";<br />
-          } </code></p>
+          <h1>About <span class="gray">Me</span></h1>
+          <h3>Objective</h3>
+          <p>Seeking employment in the computer engineering field or computer science field where I may utilize my
+            strong analytical abilities, communication skills, and initiative traits to provide exceptional assistance
+            to the organization while gaining experience.</p>
           <h3>Programs used in Computer Engineering.</h3>
           <ol>
             <li>LabVIEW</li>
