--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="Azul/azul.html">Temporary</a>
-        <a class="nav-item nav-link" href="#">Resume</a>
+        <a class="nav-item nav-link" href="Azul/azul.html">Temporary Website</a>
+        <a class="nav-item nav-link" href="Documents/garcia_juan_resume.pdf">Resume</a>
         <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">New Website</a>
       </div>
     </div>
@@ -34,7 +34,7 @@
     <h1 class="display-4">Maintaince!</h1>
     <p class="lead">My website is under construction.</p>
     <hr class="my-4">
-    <p>However, you can see the temporary website that I had up.</p>
+    <p>However, you can see the temporary website that I have up.</p>
     <a class="btn btn-primary btn-lg" href="Azul/azul.html" role="button">Temporary Website</a>
   </div>
 
