--- a/Azul/azul.html
+++ b/Azul/azul.html
@@ -16,10 +16,10 @@
       <div id="menu">
         <ul>
           <li id="current"><a href="azul.html">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Resume</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="resume.html">Resume</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href='http://www.cs.csubak.edu/~jgarcia3/about.php'>Contact</a></li>
+          <li><a href='contact.hml'>Contact</a></li>
         </ul>
       </div>
     </div>
@@ -47,15 +47,9 @@
         <a name="Computer Engineering"></a>
         <div class="box">
           <h1>About <span class="gray">Me</span></h1>
-          <h3>Objective</h3>
-          <p>Seeking employment in the computer engineering field or computer science field where I may utilize my
-            strong analytical abilities, communication skills, and initiative traits to provide exceptional assistance
-            to the organization while gaining experience.</p>
-          <h3>Programs used in Computer Engineering.</h3>
-          <ol>
-            <li>LabVIEW</li>
-            <li>MATLAB</li>
-          </ol>
+          <h3>Website Goal</h3>
+          <p>This website is to display my portfolio and resume. It is also another way to get in contact with me.</p>
+
           <h3>Blockquote</h3>
           <blockquote>
             <p>"The only thing necessary for the triumph of evil is for good men to do nothing." -Edmund Burke</p>
@@ -64,24 +58,6 @@
               <iframe src="calendar.html" height="200" width="300"></iframe>
             </p>
           </blockquote>
-          <h3>Image and text</h3>
-          <p><a href="http://getfirefox.com/"><img src="firefox-gray.jpg" width="100" height="121" alt="firefox-gray"
-                class="float-left" /></a> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero.
-            Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem,
-            eu posuere nunc justo tempus leo.</p><br /><br /><br /><br /><br />
-          <h3>Example Form</h3>
-          <form action="#">
-            <p>
-              <label>Name</label>
-              <input name="dname" value="Your Name" type="text" size="30" />
-              <label>Email</label>
-              <input name="demail" value="Your Email" type="text" size="30" />
-              <label>Your Comments</label>
-              <textarea rows="5" cols="5"></textarea>
-              <br />
-              <input class="button" type="submit" />
-            </p>
-          </form>
           <br />
         </div>
       </div>
