--- a/Azul/calendar.html
+++ b/Azul/calendar.html
@@ -1,84 +1,76 @@
 <html>
-    <body>
-        <TABLE BORDER = 3 CELLSPACING = 3 CELLPADDING = 3>
+
+<body>
+    <TABLE BORDER=3 CELLSPACING=3 CELLPADDING=3>
         <TR>
-            <TD COLSPAN = "7" ALIGN = center><B>August 2016</B></TD>
+            <TD COLSPAN="7" ALIGN=center><B>January 2020</B></TD>
         </TR>
 
         <TR>
-            <TD COLSPAN = "7" ALIGN = center><I>School Starts</I></TD> 
+            <TD COLSPAN="7" ALIGN=center><I>Happy New Year!</I></TD>
         </TR>
 
         <TR>
-            <TD ALIGN = center>Sun</TD>
-            <TD ALIGN = center>Mon</TD>
-            <TD ALIGN = center>Tue</TD>
-            <TD ALIGN = center>Wed</TD>
-            <TD ALIGN = center>Thu</TD>
-            <TD ALIGN = center>Fri</TD>
-            <TD ALIGN = center>Sat</TD>
+            <TD ALIGN=center>Sun</TD>
+            <TD ALIGN=center>Mon</TD>
+            <TD ALIGN=center>Tue</TD>
+            <TD ALIGN=center>Wed</TD>
+            <TD ALIGN=center>Thu</TD>
+            <TD ALIGN=center>Fri</TD>
+            <TD ALIGN=center>Sat</TD>
         </TR>
 
         <TR>
-            <TD ALIGN = center></TD>
-            <TD ALIGN = center>1</TD>
-            <TD ALIGN = center>2</TD>
-            <TD ALIGN = center>3</TD>
-            <TD ALIGN = center>4</TD>
-            <TD ALIGN = center>5</TD>
-            <TD ALIGN = center>6</TD>
+            <TD ALIGN=center></TD>
+            <TD ALIGN=center></TD>
+            <TD ALIGN=center></TD>
+            <TD ALIGN=center>1</TD>
+            <TD ALIGN=center>2</TD>
+            <TD ALIGN=center>3</TD>
+            <TD ALIGN=center>4</TD>
         </TR>
 
         <TR>
-            <TD ALIGN = center>7</TD>
-            <TD ALIGN = center>8</TD>
-            <TD ALIGN = center>9</TD>
-            <TD ALIGN = center>10</TD>
-            <TD ALIGN = center>11</TD>
-            <TD ALIGN = center>12</TD>
-            <TD ALIGN = center>13</TD>
+            <TD ALIGN=center>5</TD>
+            <TD ALIGN=center>6</TD>
+            <TD ALIGN=center>7</TD>
+            <TD ALIGN=center>8</TD>
+            <TD ALIGN=center>9</TD>
+            <TD ALIGN=center>10</TD>
+            <TD ALIGN=center>11</TD>
         </TR>
 
         <TR>
-            <TD ALIGN = center>14</TD>
-            <TD ALIGN = center>15</TD>
-            <TD ALIGN = center>16</TD>
-            <TD ALIGN = center>17</TD>
-            <TD ALIGN = center>18</TD>
-            <TD ALIGN = center>19</TD>
-            <TD ALIGN = center>20</TD>
+            <TD ALIGN=center>12</TD>
+            <TD ALIGN=center>13</TD>
+            <TD ALIGN=center>14</TD>
+            <TD ALIGN=center>15</TD>
+            <TD ALIGN=center>16</TD>
+            <TD ALIGN=center>17</TD>
+            <TD ALIGN=center>18</TD>
         </TR>
 
         <TR>
-            <TD ALIGN = center>21</TD>
-            <TD ALIGN = center>22</TD>
-            <TD ALIGN = center>23</TD>
-            <TD ALIGN = center>24</TD>
-            <TD ALIGN = center>25</TD>
-            <TD ALIGN = center>26</TD>
-            <TD ALIGN = center>27</TD>
+            <TD ALIGN=center>19</TD>
+            <TD ALIGN=center>20</TD>
+            <TD ALIGN=center>21</TD>
+            <TD ALIGN=center>22</TD>
+            <TD ALIGN=center>23</TD>
+            <TD ALIGN=center>24</TD>
+            <TD ALIGN=center>25</TD>
         </TR>
 
         <TR>
-            <TD ALIGN = center>28</TD>
-            <TD ALIGN = center>29</TD>
-            <TD ALIGN = center>30</TD>
-            <TD ALIGN = center>31</TD>
-            <TD ALIGN = center></TD>
-            <TD ALIGN = center></TD>
-            <TD ALIGN = center></TD>
+            <TD ALIGN=center>26</TD>
+            <TD ALIGN=center>27</TD>
+            <TD ALIGN=center>28</TD>
+            <TD ALIGN=center>29</TD>
+            <TD ALIGN=center>30</TD>
+            <TD ALIGN=center>31</TD>
+            <TD ALIGN=center></TD>
         </TR>
 
-        <TR>
-            <TD ALIGN = center></TD>
-            <TD ALIGN = center></TD>
-            <TD ALIGN = center></TD>
-            <TD ALIGN = center></TD>
-            <TD ALIGN = center></TD>
-            <TD ALIGN = center></TD>
-            <TD ALIGN = center></TD>
-        </TR>
+    </TABLE>
+</body>
 
-        </TABLE>
-    </body>
 </html>
