--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Azul/azul.html">Temporary Website</a>
+          <a class="nav-link disabled" href="Azul/azul.html">Temporary Website</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Documents/garcia_juan_resume.pdf">Resume</a>
+          <a class="nav-link disabled" href="w3schools.html">Resume</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
@@ -56,8 +56,8 @@
             About Me
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Portfolio</a>
-            <a class="dropdown-item" href="#">Contact</a>
+            <a class="dropdown-item disabled" href="#">Portfolio</a>
+            <a class="dropdown-item disabled" href="#">Contact</a>
           </div>
         </li>
       </ul>
@@ -69,8 +69,9 @@
     <h1 class="display-4">Maintaince!</h1>
     <p class="lead">My website is under construction.</p>
     <hr class="my-4">
-    <p>However, you can see the temporary website that I have up.</p>
-    <a class="btn btn-primary btn-lg" href="Azul/azul.html" role="button">Temporary Website</a>
+    <p>However, you can get a copy of my resume here. The file is in PDF format. You can find my LinkedIn Profile as well.</p>
+    <a class="btn btn-primary btn-lg" href="Documents/garcia_juan_resume.pdf" role="button">Resume</a>
+    <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/jgarcia45/" role="button">LinkedIn</a>
   </div>
 
   <!--Footer-->
