Added RockPaperScissor File

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <p>However, you can get a copy of my resume here. The file is in PDF format. You can find my LinkedIn Profile as well.</p>
     <a class="btn btn-primary btn-lg" href="Documents/garcia_juan_resume.pdf" role="button">Resume</a>
     <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/jgarcia45/" role="button">LinkedIn</a>
+    <a class="btn btn-primary btn-lg" href="RockPaperScissors/lab7.html" role="button">Rock Paper Scissor</a>
   </div>
 
   <!--Footer-->
