--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
 </head>
 
 <body>
+
+  <script type="text/javascript">
+    window.alert("Website is under maintaince, but you may still browser around.")
+  </script>
   <!--Navbar-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">
-      <img src="img/profilephoto.JPG" width="30" height="30" class="d-inline-block align-top"
-        alt="">
+      <img src="img/profilephoto.JPG" width="30" height="30" class="d-inline-block align-top" alt="">
       Garcia
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -43,9 +46,6 @@
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="Azul/azul.html">Temporary Website</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="w3schools.html">Resume</a>
@@ -65,14 +65,42 @@
   </nav>
 
   <!--Content-->
-  <div class="jumbotron">
-    <h1 class="display-4">Maintaince!</h1>
-    <p class="lead">My website is under construction.</p>
-    <hr class="my-4">
-    <p>However, you can get a copy of my resume here. The file is in PDF format. You can find my LinkedIn Profile as well.</p>
-    <a class="btn btn-primary btn-lg" href="Documents/garcia_juan_resume.pdf" role="button">Resume</a>
-    <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/jgarcia45/" role="button">LinkedIn</a>
-    <a class="btn btn-primary btn-lg" href="RockPaperScissors/lab7.html" role="button">Rock Paper Scissor</a>
+  <div class="container">
+    <h1 class="text-center">Curriculum Vitae</h1>
+    <div class="row">
+      <h2>Objective</h2>
+      <p>Seeking employment in the computer engineering field or computer science field where I may utilize my strong
+        analytical abilities, communication skills, and initiative traits to provide exceptional assistance to the
+        organization while gaining experience.</p>
+    </div>
+    <hr>
+    <div class="row">
+      <h2>Education</h2>
+      <p></p>
+    </div>
+    <hr>
+    <div class="row">
+      <h2>Coursework</h2>
+      <p></p>
+    </div>
+    <hr>
+    <div class="row">
+      <h2>Experience</h2>
+      <p></p>
+    </div>
+    <hr>
+    <div class="row">
+      <h2>Skills</h2>
+      <p></p>
+    </div>
+    <hr>
+    <div class="row">
+      <h2>Projects</h2>
+      <p></p>
+    </div>
+    <hr>
+
+
   </div>
 
   <!--Footer-->
