--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!--Navbar-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">
-      <img src="img/profilephoto.JPG" width="30" height="30" class="d-inline-block align-top" alt="">
+      <img src="img/garciaedited.png" width="100" height="30" class="d-inline-block align-top" alt="">
       Garcia
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
