Added icons to index file

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
   <!--Content-->
   <div class="container">
     <h1 class="text-center">Curriculum Vitae</h1>
+    <hr>
     <div class="row">
+      <i style='font-size:24px' class='fas'>&#xf5d1;</i>
       <h2>Objective</h2>
       <p>Seeking employment in the computer engineering field or computer science field where I may utilize my strong
         analytical abilities, communication skills, and initiative traits to provide exceptional assistance to the
@@ -75,26 +77,31 @@
     </div>
     <hr>
     <div class="row">
+      <i style='font-size:24px' class='fas'>&#xf19d;</i>
       <h2>Education</h2>
       <p></p>
     </div>
     <hr>
     <div class="row">
+      <i style='font-size:24px' class='fas'>&#xf108;</i>
       <h2>Coursework</h2>
       <p></p>
     </div>
     <hr>
     <div class="row">
+      <i style='font-size:24px' class='fas'>&#xf508;</i>
       <h2>Experience</h2>
       <p></p>
     </div>
     <hr>
     <div class="row">
+      <i style='font-size:24px' class='fas'> &#xf121;</i>
       <h2>Skills</h2>
       <p></p>
     </div>
     <hr>
     <div class="row">
+      <i style='font-size:24px' class='fas'> &#xf126;</i>
       <h2>Projects</h2>
       <p></p>
     </div>
