--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="w3schools.html">Resume</a>
+          <a class="nav-link" href="w3schools.html">Resume</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
@@ -67,46 +67,69 @@
   <!--Content-->
   <div class="container">
     <h1 class="text-center">Curriculum Vitae</h1>
+    <hr class="line-header">
+    <!--Objective-------------------------------------------------------------->
+    <i style='font-size:36px' class='fas'>&#xf5d1; Objective</i>
+    <p>Seeking employment in the computer engineering field or computer science field where I may utilize my strong
+      analytical abilities, communication skills, and initiative traits to provide exceptional assistance to the
+      organization while gaining experience.</p>
     <hr>
-    <div class="row">
-      <i style='font-size:24px' class='fas'>&#xf5d1;</i>
-      <h2>Objective</h2>
-      <p>Seeking employment in the computer engineering field or computer science field where I may utilize my strong
-        analytical abilities, communication skills, and initiative traits to provide exceptional assistance to the
-        organization while gaining experience.</p>
-    </div>
+    <!--Education-------------------------------------------------------------->
+    <i style='font-size:36px' class='fas'>&#xf19d; Education</i>
+    <h2>California State University, Bakersfield</h2>
+    <h4>Bachelor of Science (B.S.) - Computer Engineering</h4>
+    <h4>Minor - Computer Science</h4>
+    <i style='font-size:18px' class='fas'>&#xf133; September 2012 - December 2017</i>
     <hr>
-    <div class="row">
-      <i style='font-size:24px' class='fas'>&#xf19d;</i>
-      <h2>Education</h2>
-      <p></p>
-    </div>
+    <!--Coureswork-------------------------------------------------------------->
+    <i style='font-size:36px' class='fas'>&#xf108; Coursework</i>
+    <h2>Computer Engineering: </h2>
+    <p>&#9632; Introduction to Unix &#9632; Programming Fundamentals &#9632; Data Structures and Algorithms &#9632;
+      Electric Circuits &#9632;
+      Assembly Language Programming &#9632; Digital Circuits &#9632; Embedded Systems &#9632; Discrete Structures
+      &#9632; Analog Circuits &#9632; Digital
+      Design with VHDL &#9632; Instrucmentaion Control and Data Acquistion</p>
+    <h2>Computer Science: </h2>
+    <p>&#9632; Object-Oriented Programming &#9632; Internet Programming and Web Design &#9632; Server Scripting
+      Languages &#9632;
+      Digital Forensics &#9632;
+      Web Programming I</p>
+    <h2>Udemy: </h2>
+    <p>&#9632; Modern React with Redux [2019 Update] &#9632; JavaScript: Understanding the Weird Parts &#9632; Advanced
+      JavaScript &#9632; Git Complete: The definitive, step-by-step guide to Git &#9632; AutoCAD 2D and 3D practice
+      drawings</p>
     <hr>
-    <div class="row">
-      <i style='font-size:24px' class='fas'>&#xf108;</i>
-      <h2>Coursework</h2>
-      <p></p>
-    </div>
+    <!--Experience-------------------------------------------------------------->
+    <i style='font-size:36px' class='fas'>&#xf508; Experience</i>
+    <h2>Web Developer</h2>
+    <h4>Self Employed - Freelance</h4>
+    <i style='font-size:18px' class='fas'>&#xf133; July 2018 - Present</i>
+    <ul>
+      <li>Develop websites for clients using HTML, CSS, JavaScript, and PHP.</li>
+    </ul>
+    <h2>Animal Sitter</h2>
+    <h4>Fording Family - Freelance</h4>
+    <i style='font-size:18px' class='fas'>&#xf133; August 2009 - Present</i>
+    <ul>
+      <li>Entrusted to care for family pets on a weekly basis.</li>
+      <li>Demonstrated great customer service by providing companionship and comfort for the pets.</li>
+    </ul>
+    <h2>Web Developer</h2>
+    <h4>Taco Pronto - Freelance</h4>
+    <i style='font-size:18px' class='fas'>&#xf133; January 2015 - December 2018</i>
+    <ul>
+      <li>Website: https://www.tacoprontotogo.com/</li>
+      <li>Helped the design and layout of company website and would update the prices and menu of company website when needed.</li>
+    </ul>
     <hr>
-    <div class="row">
-      <i style='font-size:24px' class='fas'>&#xf508;</i>
-      <h2>Experience</h2>
-      <p></p>
-    </div>
+    <!--Skills-------------------------------------------------------------->
+    <i style='font-size:36px' class='fas'> &#xf121; Skills</i>
+    <p></p>
     <hr>
-    <div class="row">
-      <i style='font-size:24px' class='fas'> &#xf121;</i>
-      <h2>Skills</h2>
-      <p></p>
-    </div>
-    <hr>
-    <div class="row">
-      <i style='font-size:24px' class='fas'> &#xf126;</i>
-      <h2>Projects</h2>
-      <p></p>
-    </div>
-    <hr>
-
+    <!--Projects-------------------------------------------------------------->
+    <i style='font-size:36px' class='fas'> &#xf126; Projects</i>
+    <p></p>
+    <hr class="line-header">
 
   </div>
 
