Updated button for resume

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="w3schools.html">Resume</a>
+          <a class="nav-link disabled" href="w3schools.html">Resume</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
