Finished Index, gonna work on Contact and Portfolio

--- a/index.html
+++ b/index.html
@@ -48,17 +48,10 @@
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="w3schools.html">Resume</a>
+          <a class="nav-link disabled" href="portfolio.html">Portfolio</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            About Me
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item disabled" href="#">Portfolio</a>
-            <a class="dropdown-item disabled" href="#">Contact</a>
-          </div>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
@@ -73,6 +66,8 @@
     <p>Seeking employment in the computer engineering field or computer science field where I may utilize my strong
       analytical abilities, communication skills, and initiative traits to provide exceptional assistance to the
       organization while gaining experience.</p>
+    <p>You can download a hard copy of my resume right here: </p>
+    <a type="button" class="btn btn-primary" href="documents/garcia_juan_resume.pdf">Resume</a>
     <hr>
     <!--Education-------------------------------------------------------------->
     <i style='font-size:36px' class='fas'>&#xf19d; Education</i>
@@ -118,17 +113,26 @@
     <h4>Taco Pronto - Freelance</h4>
     <i style='font-size:18px' class='fas'>&#xf133; January 2015 - December 2018</i>
     <ul>
-      <li>Website: https://www.tacoprontotogo.com/</li>
-      <li>Helped the design and layout of company website and would update the prices and menu of company website when needed.</li>
+      <li><a href="https://www.tacoprontotogo.com/">Website</a></li>
+      <li>Helped the design and layout of company website and would update the prices and menu of company website when
+        needed.</li>
     </ul>
     <hr>
     <!--Skills-------------------------------------------------------------->
     <i style='font-size:36px' class='fas'> &#xf121; Skills</i>
-    <p></p>
+    <h2>Programming Languages: </h2>
+    <p>&#9632; C++ &#9632; HTML &#9632; CSS &#9632; JavaScript &#9632; PHP &#9632; Git &#9632; LATEX</p>
+    <h2>Software: </h2>
+    <p>&#9632; NI Multisim &#9632; LabVIEW &#9632; SPICE Software &#9632; MATLAB &#9632; MobaXterm &#9632; SketchUp
+      &#9632; AutoCAD</p>
+    <h2>Laboratory: </h2>
+    <p>&#9632; FPGA Board &#9632; NI Elvis II &#9632; Multimeter &#9632; Arduino UNO &#9632; Soldering &#9632; 3D
+      Printer</p>
     <hr>
     <!--Projects-------------------------------------------------------------->
     <i style='font-size:36px' class='fas'> &#xf126; Projects</i>
-    <p></p>
+    <p>A list of my projects can be found in my portfolio.</p>
+    <a type="button" class="btn btn-primary disabled" href="portfolio.html">Portfolio</a>
     <hr class="line-header">
 
   </div>
