--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,6 @@
 </head>
 
 <body>
-
-    <script type="text/javascript">
-        window.alert("Website is under maintaince, but you may still browser around.")
-    </script>
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">
@@ -61,13 +57,36 @@
     <div class="container">
         <h1 class="text-center">Portfolio</h1>
         <hr class="line-header">
-        <!--Objective-------------------------------------------------------------->
-        <i style='font-size:36px' class='fas'>&#xf5d1; Objective</i>
-        <p>Seeking employment in the computer engineering field or computer science field where I may utilize my strong
-            analytical abilities, communication skills, and initiative traits to provide exceptional assistance to the
-            organization while gaining experience.</p>
-        <p>You can download a hard copy of my resume right here: </p>
-        <a type="button" class="btn btn-primary" href="documents/garcia_juan_resume.pdf">Resume</a>
+        <!--About the Projects-------------------------------------------------------------->
+        <i style='font-size:36px' class='fas'>&#xf187; Description</i>
+        <p>Github is where I host all of my source code for my projects or coding assignments that I have done. </p>
+        <a type="button" class="btn btn-primary" href="https://github.com/jgarcia45">Github</a>
+        <hr>
+        <!--Project01-------------------------------------------------------------->
+        <i style='font-size:36px' class='fas'>&#xf120; Emilio Huerta</i>
+        <h4>Freelance</h4>
+        <p>Developed a website for our client, Emilio Huerta, for his Supervisor campaign. Emilio needed a website to
+            reach out to his voters, as well that allowed voters to contact him. The website was developed in HTML, CSS,
+            Bootstrap, JavaScript, and PHP.</p>
+        <a type="button" class="btn btn-primary" href="https://votehuerta.org/">Website</a>
+        <a type="button" class="btn btn-primary" href="https://github.com/jgarcia45/Harmanku.github.io">Source Code</a>
+        <hr>
+        <!--Project02-------------------------------------------------------------->
+        <i style='font-size:36px' class='fas'>&#xf120; React Mini Projects</i>
+        <h4>Self Taught</h4>
+        <p>Learned how to code in React, so these were some of assignments that I learned. We learned React from taking a course in Udemy.</p>
+        <h5>Tic Tac Toe</h5>
+        <a type="button" class="btn btn-primary" href="https://juanalfredogarciajr.com/tic-tac-toe/">Website</a>
+        <a type="button" class="btn btn-primary" href="https://github.com/jgarcia45/tic-tac-toe">Source Code</a>
+        <h5>Songs</h5>
+        <a type="button" class="btn btn-primary" href="https://juanalfredogarciajr.com/Songs/">Website</a>
+        <a type="button" class="btn btn-primary" href="https://github.com/jgarcia45/Songs">Source Code</a>
+        <hr>
+        <!--Project03-------------------------------------------------------------->
+        <i style='font-size:36px' class='fas'>&#xf120; Barcode Scanner</i>
+        <h4>Senior Project</h4>
+        <p>Developed a software that allowed us to reconstruct barcodes that were partially damaged.</p>
+        <a type="button" class="btn btn-primary" href="https://github.com/jgarcia45/BarcodeScanner">Source Code</a>
         <hr>
         <hr class="line-header">
     </div>
