--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">
@@ -58,13 +59,12 @@
         <h1 class="text-center">Contact</h1>
         <hr class="line-header">
         <!--Objective-------------------------------------------------------------->
-        <i style='font-size:36px' class='fas'>&#xf5d1; Objective</i>
-        <p>Seeking employment in the computer engineering field or computer science field where I may utilize my strong
-            analytical abilities, communication skills, and initiative traits to provide exceptional assistance to the
-            organization while gaining experience.</p>
-        <p>You can download a hard copy of my resume right here: </p>
-        <a type="button" class="btn btn-primary" href="documents/garcia_juan_resume.pdf">Resume</a>
-        <hr>
+        <i style='font-size:36px' class='fab fa-linkedin'> LinkedIn</i>
+        <p>LinkedIn is one of the methods for you to get in contact with me.</p>
+        <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal"
+            data-theme="dark" data-vanity="jgarcia45"><a class="LI-simple-link"
+                href='https://www.linkedin.com/in/jgarcia45?trk=profile-badge'>Juan Garcia</a>
+        </div>
         <hr class="line-header">
     </div>
 
