--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,8 @@
         <!--Project02-------------------------------------------------------------->
         <i style='font-size:36px' class='fas'>&#xf120; React Mini Projects</i>
         <h4>Self Taught</h4>
-        <p>Learned how to code in React, so these were some of assignments that I learned. We learned React from taking a course in Udemy.</p>
+        <p>Learned how to code in React, so these were some of assignments that I learned. We learned React from taking
+            a course in Udemy.</p>
         <h5>Tic Tac Toe</h5>
         <a type="button" class="btn btn-primary" href="https://juanalfredogarciajr.com/tic-tac-toe/">Website</a>
         <a type="button" class="btn btn-primary" href="https://github.com/jgarcia45/tic-tac-toe">Source Code</a>
