--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
 </head>
 
 <body>
-
-  <script type="text/javascript">
-    window.alert("Website is under maintaince, but you may still browser around.")
-  </script>
   <!--Navbar-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">
@@ -58,7 +54,7 @@
   </nav>
 
   <!--Content-->
-  <div class="container">
+  <div class="container container-border">
     <h1 class="text-center">Curriculum Vitae</h1>
     <hr class="line-header">
     <!--Objective-------------------------------------------------------------->
@@ -132,7 +128,7 @@
     <!--Projects-------------------------------------------------------------->
     <i style='font-size:36px' class='fas'> &#xf126; Projects</i>
     <p>A list of my projects can be found in my portfolio.</p>
-    <a type="button" class="btn btn-primary disabled" href="portfolio.html">Portfolio</a>
+    <a type="button" class="btn btn-primary" href="portfolio.html">Portfolio</a>
     <hr class="line-header">
 
   </div>
