--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <li>Entrusted to care for family pets on a weekly basis.</li>
       <li>Demonstrated great customer service by providing companionship and comfort for the pets.</li>
     </ul>
-    <h2>Web Developer</h2>
+    <h2>Frontend Web Developer</h2>
     <h4>Taco Pronto - Freelance</h4>
     <i style='font-size:18px' class='fas'>&#xf133; January 2015 - December 2018</i>
     <ul>
