Updated Experience and Skills

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="maybe.html">Example</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -100,7 +103,7 @@
     </ul>
     <h2>Animal Sitter</h2>
     <h4>Fording Family - Freelance</h4>
-    <i style='font-size:18px' class='fas'>&#xf133; August 2009 - Present</i>
+    <i style='font-size:18px' class='fas'>&#xf133; August 2009 - March 2020</i>
     <ul>
       <li>Entrusted to care for family pets on a weekly basis.</li>
       <li>Demonstrated great customer service by providing companionship and comfort for the pets.</li>
@@ -117,7 +120,7 @@
     <!--Skills-------------------------------------------------------------->
     <i style='font-size:36px' class='fas'> &#xf121; Skills</i>
     <h2>Programming Languages: </h2>
-    <p>&#9632; C++ &#9632; HTML &#9632; CSS &#9632; JavaScript &#9632; PHP &#9632; Git &#9632; LATEX</p>
+    <p>&#9632; C++ &#9632; HTML &#9632; CSS &#9632; JavaScript &#9632; PHP &#9632; Git &#9632; React (Beginner) &#9632; LATEX</p>
     <h2>Software: </h2>
     <p>&#9632; NI Multisim &#9632; LabVIEW &#9632; SPICE Software &#9632; MATLAB &#9632; MobaXterm &#9632; SketchUp
       &#9632; AutoCAD</p>
