--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="index.html">
       <img src="img/garciaedited.png" width="100" height="30" class="d-inline-block align-top" alt="">
-      Garcia
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +49,7 @@
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="maybe.html">Example</a>
+          <a class="nav-link disabled" href="maybe.html">Example</a>
         </li>
       </ul>
     </div>
@@ -120,7 +119,8 @@
     <!--Skills-------------------------------------------------------------->
     <i style='font-size:36px' class='fas'> &#xf121; Skills</i>
     <h2>Programming Languages: </h2>
-    <p>&#9632; C++ &#9632; HTML &#9632; CSS &#9632; JavaScript &#9632; PHP &#9632; Git &#9632; React (Beginner) &#9632; LATEX</p>
+    <p>&#9632; C++ &#9632; HTML &#9632; CSS &#9632; JavaScript &#9632; PHP &#9632; Git &#9632; React (Beginner) &#9632;
+      LATEX</p>
     <h2>Software: </h2>
     <p>&#9632; NI Multisim &#9632; LabVIEW &#9632; SPICE Software &#9632; MATLAB &#9632; MobaXterm &#9632; SketchUp
       &#9632; AutoCAD</p>
