--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       analytical abilities, communication skills, and initiative traits to provide exceptional assistance to the
       organization while gaining experience.</p>
     <p>You can download a hard copy of my resume right here: </p>
-    <a type="button" class="btn btn-primary" href="documents/garcia_juan_resume.pdf">Resume</a>
+    <a type="button" class="btn btn-primary" href="https://app.rezi.io/s/09aroDdgsFPTAWV3LLwB">Resume</a>
     <hr>
     <!--Education-------------------------------------------------------------->
     <i style='font-size:36px' class='fas'>&#xf19d; Education</i>
@@ -94,9 +94,15 @@
     <hr>
     <!--Experience-------------------------------------------------------------->
     <i style='font-size:36px' class='fas'>&#xf508; Experience</i>
+    <h2>Seasonal Warehouse Worker</h2>
+    <h4>Target</h4>
+    <i style='font-size:18px' class='fas'>&#xf133; August 2020 - Present</i>
+    <ul>
+      <li>Working in the Outbound Department where I load trailers with packages to be delivered to the stores.</li>
+    </ul>
     <h2>Web Developer</h2>
     <h4>Self Employed - Freelance</h4>
-    <i style='font-size:18px' class='fas'>&#xf133; July 2018 - Present</i>
+    <i style='font-size:18px' class='fas'>&#xf133; July 2018 - August 2020</i>
     <ul>
       <li>Develop websites for clients using HTML, CSS, JavaScript, and PHP.</li>
     </ul>
